# pulsedash

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.backend  Dockerfile.dev  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.config/: starship.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
ProjectSettings/: ProjectSettings.asset
assets/: Scenes.unity
assets/Prefabs/: Slider.prefab
assets/Script/: AudioCache.cs  Bouton.cs  JamendoAPI.cs  MenuGenerator.cs  MusicButton.cs  MusiqueManager.cs  Playlist.cs  PlaylistManager.cs  PlaylistUI.cs  PopupManager.cs  SearchUI.cs  SliderMusique.cs  SliderMusiqueFactory.cs  Track.cs  UIBuilder.cs  UIconteneur.cs
assets/_Recovery/: 0.unity
backup/: docker-compose.yml.bak
changelog/: index.html
dev/CONTRIBUTING/: index.html
dev/api/: index.html
dev/architechture/: index.html
dev/architecture/: index.html
dev/ci-cd/: index.html
dev/data-schema/: index.html
dev/gitconventions/: index.html
dev/pipeline/: index.html
dev/setup/: index.html
docs/: changelog.md  game.md  index.md  requirements_doc.txt
docs/dev/: CONTRIBUTING.md  api.md  architecture.md  data-schema.md  gitconventions.md  pipeline.md  setup.md
documentation/: example.typ
documentation/chapters/: example_ch1.typ
documentation/utils/: template.typ
game/: index.html
search/: search_index.json
src/api/: main.py
src/pipeline/: main.py
unity/Assets/: CreateObject.cs  GameplayScene.unity
(+51 files in other folders)
