[project]
name = "wavr"
version = "0.0.1"
dependencies = [
    # dépendances ici
    # "requests>=2.31.0",
    "numpy"
]

[tool.setuptools]
packages = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
